--- a/TrashCollector/TrashCollector.csproj
+++ b/TrashCollector/TrashCollector.csproj
@@ -257,6 +257,7 @@
     <Content Include="Views\Employee\Index.cshtml" />
     <Content Include="Views\Customer\OneTime.cshtml" />
     <Content Include="Views\Customer\Suspend.cshtml" />
+    <Content Include="Views\Employee\Map.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
